[project]
name = "pviz"
version = "0.1.0"
description = "Availability Impact Analyzer"
readme = "README.md"
authors = [
    { name = "Franck Cuny", email = "59291+fcuny@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = ["rich>=13.9.4"]

[project.optional-dependencies]
dev = ["pytest>=8.3.4", "pytest-cov>=4.1.0", "ruff>=0.3.0", "build>=1.0.3"]

[project.scripts]
pviz = "pviz:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
